--- a/test/Project.toml
+++ b/test/Project.toml
@@ -4,6 +4,7 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GalacticBBO = "80c49c3a-6557-47d9-8f5b-13d0a2920315"
 GalacticOptim = "a75be94c-b780-496d-a8a9-0878b188d577"
+GalacticOptimJL = "9d3c5eb1-403b-401b-8c0f-c11105342e6b"
 MeasureBase = "fa1605e6-acd5-459c-a1e6-7e635759db14"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
