--- a/lib/ComradeAdaptMCMC/Project.toml
+++ b/lib/ComradeAdaptMCMC/Project.toml
@@ -13,7 +13,7 @@ TupleVectors = "615932cf-77b6-4358-adcd-5b7eba981d7e"
 AbstractMCMC = "3, 4"
 AdaptiveMCMC = "0.1"
 Comrade = "0.3,0.4"
-TupleVectors = "0.1"
+TupleVectors = "0.1, 0.2"
 julia = "1.6"
 
 [extras]
