--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ lib/ComradeAdaptMCMC/Manifest.toml
 lib/ComradeDynesty/Manifest.toml
 lib/ComradeNested/Manifest.toml
 lib/ComradeOptimization/Manifest.toml
+lib/ComradeOptimization/Manifest.toml
+lib/ComradeOptimization/Manifest.toml
