--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ NFFT = "efe261a4-0d2b-5849-be55-fc731d526b0d"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 ParameterHandling = "2412ca09-6db7-441c-8e3a-88d5709968c5"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -77,6 +78,7 @@ NFFT = "0.10, 0.11, 0.12"
 NamedTupleTools = "0.13, 0.14"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
+PrettyTables = "1"
 PyCall = "^1"
 RecipesBase = "1"
 Reexport = "1"
