--- a/Project.toml
+++ b/Project.toml
@@ -66,7 +66,7 @@ DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 FFTW = "^1"
-FITSIO = "0.16"
+FITSIO = "0.16, 0.17"
 FLoops = "0.2"
 FileIO = "1"
 FillArrays = "0.12, 0.13"
