--- a/Project.toml
+++ b/Project.toml
@@ -83,6 +83,7 @@ PyCall = "^1"
 RecipesBase = "1"
 Reexport = "1"
 Requires = "1"
+ReverseDiff = "1"
 SpecialFunctions = "0.10, 1, 2"
 StaticArrays = "1"
 StatsBase = "0.31,0.32,0.33"
