--- a/Project.toml
+++ b/Project.toml
@@ -60,7 +60,7 @@ ArgCheck = "2"
 AstroTime = "0.6,0.7"
 BasicInterpolators = "0.6"
 ChainRulesCore = "1"
-ComradeBase = "^0.3.4"
+ComradeBase = "0.4"
 DensityInterface = "0.4"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
