--- a/Project.toml
+++ b/Project.toml
@@ -57,7 +57,7 @@ AbstractMCMC = "3, 4"
 Accessors = "0.1"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
-BasicInterpolators = "0.6"
+BasicInterpolators = "0.6, 0.7"
 ChainRulesCore = "1"
 ComradeBase = "^0.3.4"
 DensityInterface = "0.4"
