--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ jobs:
         
 
     steps:
+      - name: Install Libs
+        run: |
+          sudo apt-get update
+          sudo apt-get install libhdf5
       - uses: actions/checkout@v2
       - name: Setup python
         uses: actions/setup-python@v1
