--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,6 @@ ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DensityInterface = "b429d917-457f-4dbc-8f4c-0cc954292b1d"
-DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
@@ -50,7 +49,6 @@ StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TransformVariables = "84d833dd-6860-57f9-a1a7-6da5db126cff"
 VLBILikelihoods = "90db92cd-0007-4c0a-8e51-dbf0782ce592"
-ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
 AbstractDifferentiation = "0.4"
@@ -59,7 +57,7 @@ AbstractMCMC = "3, 4"
 Accessors = "0.1"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
-BasicInterpolators = "0.6"
+BasicInterpolators = "0.6, 0.7"
 ChainRulesCore = "1"
 ComradeBase = "0.4"
 DensityInterface = "0.4"
@@ -72,12 +70,12 @@ FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.3"
 KeywordCalls = "0.2"
-MeasureBase = "0.7, 0.8, 0.9"
+MeasureBase = "0.7, 0.8, 0.9, 0.10, 0.11, 0.12, 0.13, 0.14"
 NFFT = "0.10, 0.11, 0.12, 0.13"
 NamedTupleTools = "0.13, 0.14"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
-PrettyTables = "1"
+PrettyTables = "1, 2"
 PyCall = "^1"
 RecipesBase = "1"
 Reexport = "1"
@@ -87,8 +85,7 @@ StaticArrays = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
-TransformVariables = "0.5,0.6"
-ValueShapes = "0.10"
+TransformVariables = "0.5, 0.6, 0.7"
 julia = "^1.6"
 
 [extras]
