--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -19,6 +19,7 @@ MCMCDiagnostics = "6e857e4b-079a-58c4-aeab-bc2670384359"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 OptimizationBBO = "3e6eede4-6085-4f62-9a71-46d9bc1eb92b"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+PDMats = "90014a1f-27ba-587c-ab20-58faa44d9150"
 PairPlots = "43a3c2be-4208-490b-832a-a21dcd55d7da"
 Pathfinder = "b1d3bc72-d0e7-4279-b92f-7fa5d6d2d454"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -26,10 +27,12 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 RadioImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 Yota = "cd998857-8626-517d-b929-70ad188a48f0"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+ZygoteRules = "700de1a5-db45-46bc-99cf-38207098b444"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
