--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+StaticArraysCore = "1e83bf80-4336-4d27-bf5d-d5a4f845583c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
@@ -72,7 +73,7 @@ FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
 HypercubeTransform = "0.3"
 KeywordCalls = "0.2"
-MeasureBase = "0.7, 0.8, 0.9, 0.10, 0.11, 0.12, 0.13, 0.14"
+MeasureBase = "0.10, 0.11, 0.12, 0.13, 0.14"
 NFFT = "0.10, 0.11, 0.12, 0.13"
 NamedTupleTools = "0.13, 0.14"
 PaddedViews = "0.5"
