--- a/lib/ComradeAHMC/Project.toml
+++ b/lib/ComradeAHMC/Project.toml
@@ -18,7 +18,7 @@ AbstractDifferentiation = "0.4"
 AbstractMCMC = "3,4"
 AdvancedHMC = "0.3"
 ArgCheck = "2"
-Comrade = "0.5, 0.6"
+Comrade = "0.7"
 Reexport = "1"
 TypedTables = "1"
 julia = "1.7"
