--- a/lib/ComradeNested/Project.toml
+++ b/lib/ComradeNested/Project.toml
@@ -12,7 +12,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AbstractMCMC = "3, 4"
-Comrade = "0.5, 0.6"
+Comrade = "0.7"
 NestedSamplers = "0.8"
 Reexport = "1"
 TypedTables = "1"
