--- a/Project.toml
+++ b/Project.toml
@@ -73,7 +73,6 @@ Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
-
 FileIO = "1"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
@@ -87,6 +86,7 @@ ParameterHandling = "0.4"
 PrettyTables = "1, 2"
 PyCall = "^1"
 RecipesBase = "1"
+RectiGrids = "0.1"
 Reexport = "1"
 Requires = "1"
 SpecialFunctions = "0.10, 1, 2"
