--- a/Project.toml
+++ b/Project.toml
@@ -73,7 +73,6 @@ Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
-
 FileIO = "1"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
@@ -82,6 +81,7 @@ KeywordCalls = "0.2"
 MeasureBase = "0.10, 0.11, 0.12, 0.13, 0.14"
 NFFT = "0.10, 0.11, 0.12, 0.13"
 NamedTupleTools = "0.13, 0.14"
+PDMats = "0.11"
 PaddedViews = "0.5"
 ParameterHandling = "0.4"
 PrettyTables = "1, 2"
