--- a/Project.toml
+++ b/Project.toml
@@ -73,7 +73,6 @@ Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 FFTW = "^1"
 FITSIO = "0.16, 0.17"
-
 FileIO = "1"
 FillArrays = "0.12, 0.13"
 ForwardDiff = "0.9, 0.10"
@@ -95,6 +94,7 @@ StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
 TransformVariables = "0.5, 0.6, 0.7"
+TypedTables = "1"
 VLBILikelihoods = "0.1"
 julia = "^1.6"
 
