--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -12,7 +12,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AbstractMCMC = "3, 4"
-Comrade = "0.7"
+Comrade = "0.7, 0.6"
 Dynesty = "0.1"
 Reexport = "1"
 TypedTables = "1"
