--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ lib/ComradeNested/Manifest.toml
 lib/ComradeOptimization/Manifest.toml
 lib/ComradeOptimization/Manifest.toml
 lib/ComradeOptimization/Manifest.toml
+lib/ComradePigeons/Manifest.toml
