--- a/Project.toml
+++ b/Project.toml
@@ -92,6 +92,7 @@ Reexport = "1"
 Requires = "1"
 SpecialFunctions = "0.10, 1, 2"
 StaticArrays = "1"
+StaticArraysCore = "1"
 StatsBase = "0.31,0.32,0.33"
 StructArrays = "0.3,0.4,0.5,0.6"
 Tables = "1"
