--- a/Project.toml
+++ b/Project.toml
@@ -68,6 +68,7 @@ AbstractMCMC = "3, 4"
 Accessors = "0.1"
 ArgCheck = "2"
 AstroTime = "0.6,0.7"
+AxisKeys = "0.2"
 BasicInterpolators = "0.6, 0.7"
 ChainRulesCore = "1"
 ComradeBase = "0.4"
