--- a/Project.toml
+++ b/Project.toml
@@ -72,6 +72,7 @@ BasicInterpolators = "0.6, 0.7"
 ChainRulesCore = "1"
 ComradeBase = "0.4"
 DensityInterface = "0.4"
+DimensionalData = "0.24"
 Distributions = "0.24,0.25"
 DocStringExtensions = "0.6,0.7,0.8, 0.9"
 FFTW = "^1"
