--- a/lib/ComradeDynesty/Project.toml
+++ b/lib/ComradeDynesty/Project.toml
@@ -1,7 +1,7 @@
 name = "ComradeDynesty"
 uuid = "0e22d245-d796-46d0-bd67-132aa2ceb697"
 authors = ["Paul Tiede <ptiede91@gmail.com>"]
-version = "0.3.1"
+version = "0.3.2"
 
 [deps]
 AbstractMCMC = "80f14c24-f653-4e6a-9b94-39d6b0f70001"
@@ -13,7 +13,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AbstractMCMC = "3, 4"
-Comrade = "^0.7.5, 0.8"
+Comrade = "^0.7.5, 0.8, 0.9"
 Dynesty = "0.3"
 Reexport = "1"
 TypedTables = "1"
