--- a/lib/ComradeAdaptMCMC/Project.toml
+++ b/lib/ComradeAdaptMCMC/Project.toml
@@ -11,7 +11,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-AbstractMCMC = "3, 4"
+AbstractMCMC = "3, 4, 5"
 AdaptiveMCMC = "0.1"
 Comrade = "0.7,0.8, 0.9"
 TypedTables = "1"
@@ -20,8 +20,8 @@ julia = "1.7"
 [extras]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
-VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 
 [targets]
 test = ["Test", "Distributions", "Pyehtim", "VLBIImagePriors"]
